# email-cleaner

./: .gitignore  README.md  pyproject.toml
app/: delete_emails.py  fetch_email_count.py  remove_blacklisted_emails.py  requirements.txt
app/scripts/: email_cleanup.sh  fetch_email_count.py  remove_blacklisted_emails.py  setup.sh
app/utils/: email_utils.py  general_utils.py  sms_utils.py  visualization_utils.py
